<?xml version="1.0" encoding="utf-8"?>

<!-- 

	Copyright 2012 OpenKit

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

 -->
 
<resources>

    <string name="io_openkit_sdk_app_name">OpenKitSDK</string>
    
    <string name="io_openkit_login_text_include">Include friends from</string>
    <string name="io_openkit_login_text">Sign in to play with friends.</string>
    <string name="io_openkit_login_subtext">Leaderboards, achievements, and more!</string>
    <string name="io_openkit_google_signin">Sign in with Google</string>
    <string name="io_openkit_facebook_signin">Sign in with Facebook</string>
    <string name="io_openkit_fb_signin">Sign in with Facebook</string>
    <string name="io_openkit_fb">Facebook</string>
    <string name="io_openkit_twitter_signin">Sign in with Twitter</string>
	<string name="io_openkit_guest_signin">Guest Account</string>
	<string name="io_openkit_dont_sign_in">No Thanks</string>
    
	<string name="io_openkit_loggedIn">Signed in as</string>
	<string name="io_openkit_createNickName">Create a nickname for this account</string>
    <string name="io_openkit_nickExplanation">This is how you\'ll appear in leaderboards</string>
	<string name="io_openkit_continue">Continue</string>
	
	<string name="io_openkit_fbprompt_title">More friends, more fun! </string>
	<string name="io_openkit_fbprompt_subtext">Leaderboards are more fun when you play against friends! </string>
	<string name="io_openkit_fbprompt_include_friends">Include Facebook Friends</string>
	
	<string name="io_openkit_inviteFriends">Invite Friends</string>
	
    
    <string name="io_openkit_title_leaderboards">Leaderboards</string>
    <string name="io_openkit_title_achievements">Achievements</string>
    <string name="io_openkit_leaderboards_alltime">ALL TIME</string>
    <string name="io_openkit_leaderboards_thisWeek">THIS WEEK</string>
    <string name="io_openkit_leaderboards_today">TODAY</string>
    <string name="io_openkit_profile">Settings</string>
    <string name="io_openkit_logout">Logout</string>
    <string name="io_openkit_userprofle">Settings</string>
    <string name="io_openkit_changeNick">Change Nickname</string>
    
    <string name="io_openkit_googlePlayServicesError">Unfortunately, your device does not have or does not support the required version of Google Play. Please try logging with a different type of account.</string>
    <string name="io_openkit_googleLoginError">Sorry, but there was an error logging in with Google. Please try again later or try a different account type.</string>
    <string name="io_openkit_googleNoAccts">You don\'t have any Google accounts stored on your device. Go to your device settings, and choose "Accounts" and add a Google account.</string>
    <string name="io_openkit_OKLoginError">Sorry, but there was an error reaching the OpenKit servers. Please try again later or try using a different account type.</string>
    
    
    <!-- Copy string resources from Facebook SDK -->
    
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading&#8230;</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Please log in via https://www.facebook.com or https://m.facebook.com to re-enable the app to connect with Facebook.</string>
    <string name="com_facebook_requesterror_relogin">The app is not connected with Facebook, please log in and reconnect this app.</string>
    <string name="com_facebook_requesterror_password_changed">Your password on Facebook has changed, please reconnect the app with Facebook.</string>
    <string name="com_facebook_requesterror_reconnect">An error occurred when connecting with Facebook, please reconnect the app with Facebook.</string>
    <string name="com_facebook_requesterror_permissions">An app connection with Facebook failed due to insufficient permissions, please grant the app permissions to perform the operation.</string>
    
    <!-- End Facebook SDK strings -->

</resources>