<!--
	Copyright 2012 OpenKit

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@android:color/white"
       android:orientation="vertical"
       android:layout_gravity="center"
       android:paddingBottom="20dip"
       android:paddingLeft="20dip"
       android:paddingRight="20dip"
       android:paddingTop="20dip" >

	    <TextView
	        android:id="@+id/io_openkit_loginTitleTextView"
	        style="@style/OKLoginText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/io_openkit_fbprompt_title"
	        android:textAlignment="center" />
	
	    <TextView
	        android:id="@+id/io_openkit_loginSubTitleTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingBottom="10dp"
	        android:text="@string/io_openkit_fbprompt_subtext"
	        android:textAlignment="center"
	        android:textColor="@color/io_openkit_gray" />
	
	    <Button
	        android:id="@+id/io_openkit_fbSignInButton"
	        style="@style/OKLoginButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dip"
	        android:layout_marginTop="15dip"
	        android:background="@drawable/io_openkit_facebook_button"
	        android:shadowColor="@color/io_openkit_facebook_shadow"
	        android:text="@string/io_openkit_fbprompt_include_friends"
	        android:textColor="@android:color/white" />
	
	    <Button
	        android:id="@+id/io_openkit_dontSignInButton"
	        style="@style/OKLoginButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:background="@drawable/io_openkit_dismiss_button"
	        android:text="@string/io_openkit_dont_sign_in"
	        android:textColor="@color/io_openkit_gray" />

</LinearLayout>