<!-- 

	Copyright 2012 OpenKit

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="20dip"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:paddingTop="20dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="15dip" >
        
        <io.openkit.facebook.widget.ProfilePictureView
	        android:id="@+id/io_openkit_fbProfilePicView"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:layout_gravity="left"
	        android:gravity="center_horizontal" />

        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dip"
	        android:gravity="center_vertical"
	        android:orientation="vertical">
	        
		    <TextView
		        android:id="@+id/io_openkit_loggedInStringTextView"
		        style="@style/OKSmallLightGrayText"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/io_openkit_loggedIn" />
		
		    <TextView
		        android:id="@+id/io_openkit_userNickTextView"
		        style="@style/OKHeadingText"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textIsSelectable="false" />
		    
	    </LinearLayout>
    </LinearLayout>
    

    <TextView
        style="@style/OKSmallLightGrayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingBottom="0dip"
    	android:paddingLeft="0dip"
    	android:paddingRight="0dip"
    	android:paddingTop="3dip"
        android:text="@string/io_openkit_createNickName"
        android:textStyle="bold" />

    <TextView
        style="@style/OKSmallLightGrayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingBottom="15dip"
   		android:paddingLeft="0dip"
    	android:paddingRight="0dip"
    	android:paddingTop="0dip"
        android:text="@string/io_openkit_nickExplanation" />

    <EditText
        android:id="@+id/io_openkit_userNickEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:padding="10dp" >

        <requestFocus />
    </EditText>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/io_openkit_continueButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/io_openkit_continue" />
        
        <ProgressBar
            android:id="@+id/io_openkit_spinner"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateOnly="true"
            android:visibility="invisible" />
    </RelativeLayout>

</LinearLayout>